create header interface

--- a/client/src/assets/sass/base.scss
+++ b/client/src/assets/sass/base.scss
@@ -39,3 +39,19 @@ img {
   display: block; 
 }
 
+.section {
+  padding: 2rem 0 4rem;
+}
+
+.section__title {
+  font-size: $h1-font-size;
+}
+
+.section__subtitle {
+
+}
+
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
