create header interface

--- a/client/src/assets/sass/reset.scss
+++ b/client/src/assets/sass/reset.scss
@@ -74,6 +74,9 @@ input::-ms-clear {
 button {
   cursor: pointer;
   background: none;
+  &:active {
+    background: none;
+  }
 }
 
 button::-moz-focus-inner {
