--- a/client/src/components/HeaderL/HeaderT.scss
+++ b/client/src/components/HeaderL/HeaderT.scss
@@ -1,100 +1,120 @@
+/*===== HEADER =====*/
 .header {
   width: 100%;
   position: fixed;
-  bottom: 0;
+  top: 0;
   left: 0;
   z-index: $z-fixed;
   background-color: $container-color;
+  box-shadow: 0px -1px 4px rgba(0, 0, 0, .15);
 }
 
 .nav {
   max-width: 968px;
   height: $header-height;
   @include flex-all-sb;
-  &__logo{
+
+  &__logo {
     @include flex-a-start;
-    @include flex-column;
+    @include flex-row;
     color: $first-color;
     font-size: 1rem;
     transition: $transition-all;
+    flex: 1;
+    &-avatar {
+      width: 40px;
+      height: 40px;
+      margin-right: .75rem;
+    }
+    &-inner{
+      @include flex-a-start;
+      @include flex-column;
+    }
     &-title {
       font-weight: $font-medium;
     }
-    &:hover {
-      color: $primary-color-darken-1;
-    }
-    &:active {
-      color: $primary-color-darken-2;
-    }
   }
+
   &__toggle {
     font-size: 1.1rem;
     color: $first-color;
     cursor: pointer;
     transition: $transition-all;
+
     &:hover {
       color: $primary-color-darken-1;
     }
+
     &:active {
       color: $primary-color-darken-2;
     }
   }
+
   &__list {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+    
   }
+
   &__link {
     @include flex-a-start;
-    @include flex-column;
+    @include flex-row;
     align-items: center;
-    font-size: $small-font-size;
+    font-size: $h2-font-size;
     color: $first-color;
-    font-weight: $font-medium;
+    font-weight: $font-regular;
     transition: $transition-all;
+
     &:hover {
       color: $primary-color-darken-1;
     }
+
     &:active {
       color: $primary-color-darken-2;
     }
   }
+
   &__icon {
     @include flex-all-center;
     width: 30px;
     height: 30px;
-    margin-bottom: 4px;
+    margin-right: .75rem;
   }
+
   &__close {
     position: absolute;
     right: 1.3rem;
-    bottom: .5rem;
+    top: .5rem;
     width: 30px;
     height: 30px;
     cursor: pointer;
     color: $first-color;
+
     &:hover {
       color: $primary-color-darken-1;
     }
+
     &:active {
       color: $primary-color-darken-2;
     }
   }
+  
 }
 
 @media screen and (max-width: 767px) {
   .nav__menu {
-      position: fixed;
-      bottom: -100%;
-      left: 0;
-      width: 100%;
-      background-color: $container-color;
-      padding: 2rem 1.5rem 4rem;
-      box-shadow: 0px -1px 4px rgba(0, 0, 0, .15);
-      border-radius: 1.5rem 1.5rem 0 0;
-      transition: .3s;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: $container-color;
+    padding: 1rem;
+    transition: .3s;
+    &-button {
+      margin-top: $mb-3;
+    }
   }
 }
 
 .show-menu {
-  bottom: 0;
+  left: 0;
 }
