--- a/client/src/assets/sass/var.scss
+++ b/client/src/assets/sass/var.scss
@@ -15,6 +15,7 @@ $primary-color-darken-2: darken($primary-color, 20%);
 
 /*========== Font and typography ==========*/
 $body-font: 'Rubik', sans-serif;
+$body-font-second: 'Sen', sans-serif;
 
 /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
 $big-font-size: 2rem;
