--- a/client/src/components/HeaderL/HeaderT.scss
+++ b/client/src/components/HeaderL/HeaderT.scss
@@ -17,6 +17,7 @@
   &__logo {
     @include flex-a-start;
     @include flex-row;
+    width: 100%;
     color: $first-color;
     font-size: 1rem;
     transition: $transition-all;
@@ -27,11 +28,17 @@
       margin-right: .75rem;
     }
     &-inner{
-      @include flex-a-start;
-      @include flex-column;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
     }
     &-title {
+      width: 100%;
       font-weight: $font-medium;
+    }
+    &-subtitle{
+      width: 100%;
+      font-weight: $font-light;
     }
   }
 
