--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -1,5 +1,6 @@
 /*===== GOOGLE FONTS =====*/
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sen:wght@700&display=swap');
 
 /*===== STYLE VENDOR =====*/
 @import './assets/sass/vendor/source';
