--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -1,58 +1,40 @@
 .about {
   &__container {
-    justify-items: center;
-    row-gap: 2rem;
-    text-align: center;
-  }
 
+  }
   &__img {
+    width: 200px;
+    border-radius:.5rem;
+    justify-self: center;
+    align-items: center;
+  }
+  &__description {
+    text-align: center;
+    margin-bottom: $mb-2-5;
+  }
+  &__info {
     display: flex;
-    justify-content: center;
-    padding-top: 1rem;
-    width: 120px;
-    height: 120px;
-    background-color: $first-color;
-    border-radius: 50%;
-    overflow: hidden;
-
-    & img {
-      width: 100px;
+    justify-content: space-evenly;
+    margin-bottom: $mb-2-5;
+    &-title {
+      font-family: $body-font-second;
+      font-weight: $font-semi-bold;
+      display: block;
+      font-size: $h2-font-size;
+      text-align: center;
     }
-  }
-
-  &__subtitle {
-    font-size: $h2-font-size;
-    color: $first-color;
-    margin-bottom: $mb-1;
-  }
-
-  &__text {
-    margin-bottom: $mb-4;
-  }
-
-  &__profession {
-    display: block;
-    margin-bottom: $mb-4;
-  }
-
-  &__social {
-    &-icon {
-      font-size: 1.4rem;
-      margin: 0 $mb-1;
-
-      &:hover {
-        color: $first-color;
-      }
+    &-name {
+      display: block;
+      font-size: $small-font-size;
+      text-align: center;
     }
-  }
-}
 
-.bd-grid {
-  max-width: 1024px;
-  display: grid;
-  grid-template-columns: 100%;
-  grid-column-gap: 2rem;
-  width: calc(100% - 2rem);
-  margin-left: $mb-2;
-  margin-right: $mb-2;
+  }
+  &__buttons {
+    width: 100%;
+    display: flex;
+    justify-content:center;
+
+  }
+  
 }
