--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -3,14 +3,48 @@
   &__container {
     gap: 1rem;
   }
-  &__inner{
-    grid-template-columns: .5fr .3fr;
-    padding-top: 3.5rem;
+  &__content{
+    grid-template-columns: .5fr 4fr;
     align-items: center;
   }
-  &__img-blob{
-    width: 190px;
-    height: 190px;
+  &__head{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content:flex-start;
+
+  }
+  &__social {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: $mb-2;
+    margin-bottom: $mb-2;
+    
+    &-icon{
+      display: flex;
+      flex-direction: column;
+      width: 25px;
+      height: 25px;
+      color: $primary-color;
+      &:not(:last-child){
+        margin-bottom: $mb-2;
+      }
+      &:hover {
+        color: $primary-color-darken-1;
+      }
+      &:active {
+        color: $primary-color-darken-2;
+      }
+    }
+  }
+  &__img {
+    margin-bottom: $mb-2;
+    &-item {
+      fill: $primary-color;
+      width: 260px;
+      height: 260px;
+    }
   }
   &__data {
     grid-column: 1/3;
@@ -20,9 +54,9 @@
     font-size: $big-font-size;
   }
   &__subtitle {
-    font-size: $h3-font-size;
+    font-size: $h2-font-size;
     color: $first-color;
-    font-weight: $font-medium;
+    font-weight: $font-normal;
     margin-bottom: $mb-0-75;
   }
   &__description {
