--- a/client/src/assets/sass/var.scss
+++ b/client/src/assets/sass/var.scss
@@ -8,7 +8,9 @@ $second-color: #6FCF97;
 $white-color: #fff;
 $container-color: #fff;
 
-$first-color-lighter: lighten($first-color, 10%);
+$first-color-lighter: lighten($first-color, 20%);
+$primary-color-lighten-1: lighten($primary-color, 10%);
+$primary-color-lighten-2: lighten($primary-color, 30%);
 $primary-color-darken-1: darken($primary-color, 10%);
 $primary-color-darken-2: darken($primary-color, 20%);
 
