--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -18,6 +18,7 @@
 /*===== STYLE PAGES =====*/
 @import './pages/Home/Home';
 @import './pages/About/About';
+@import './pages/Skills/Skills';
 
 
 /*===== STYLE COMPONENTS =====*/
