--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -19,6 +19,8 @@
 @import './pages/Home/Home';
 @import './pages/About/About';
 @import './pages/Skills/Skills';
+@import './pages/Qualification/Qualification';
+@import './pages/Services/Services';
 
 
 /*===== STYLE COMPONENTS =====*/
