--- a/client/src/assets/sass/var.scss
+++ b/client/src/assets/sass/var.scss
@@ -16,8 +16,10 @@ $primary-color-darken-2: darken($primary-color, 20%);
 
 
 /*========== Font and typography ==========*/
-$body-font: 'Rubik', sans-serif;
-$body-font-second: 'Sen', sans-serif;
+$body-font: 'Rubik',
+sans-serif;
+$body-font-second: 'Sen',
+sans-serif;
 
 /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
 $big-font-size: 2rem;
@@ -47,9 +49,9 @@ $font-semi-bold: 700;
 
 
 // /*========== z index ==========*/
-// $z-tooltip:;
+$z-tooltip: 10;
 $z-fixed: 100;
-// $z-modal:;
+$z-modal: 100;
 
 // /*========== transition ==========*/
 $transition-all: all .15s ease-in-out;
