--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -21,6 +21,10 @@
 @import './pages/Skills/Skills';
 @import './pages/Qualification/Qualification';
 @import './pages/Services/Services';
+@import './pages/Portfolio/Portfolio';
+@import './pages/Project/Project';
+@import './pages/Contact/Contact';
+
 
 
 /*===== STYLE COMPONENTS =====*/
@@ -28,3 +32,4 @@
 @import './components/NavMenu/NavMenu';
 @import './components/SociaIcons/SociaIcons';
 @import './components/Button/Button';
+@import './components/Footer/Footer';
