--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -109,4 +109,11 @@
     background-color: transparent;
     color: $first-color;
   }
+  &-white {
+    background-color: $white-color;
+    color: $first-color;
+    &:hover {
+      color: $first-color;
+    }
+  }
 }
