--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -7,12 +7,8 @@
     grid-template-columns: .5fr 4fr;
     align-items: center;
   }
-  &__head{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content:flex-start;
-
+  &__container{
+    
   }
   &__social {
     display: flex;
