--- a/client/src/assets/sass/fonts.scss
+++ b/client/src/assets/sass/fonts.scss
@@ -1,4 +1,4 @@
 // @include font-face("Muller", "MullerRegular", 400, normal);
-@import './vendor/font-face.scss';
+@import "./vendor/font-face.scss";
 
 @include font-face("Rubik", "RubikRegular", 200, normal);
