--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -1,119 +1,119 @@
 .btn-default {
-  display: inline-block;
-  font-weight: 500;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  user-select: none;
-  border: 1px solid transparent;
-  padding: .563rem 1.188rem;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  border-radius: 8px;
-  transition: $transition-all;
-  &:hover {
-    color: $white-color;
-    background-color: $primary-color-darken-1;
-    border-color: $primary-color-darken-1;
-  }
+    display: inline-block;
+    font-weight: 500;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.563rem 1.188rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    border-radius: 8px;
+    transition: $transition-all;
+    &:hover {
+        color: $white-color;
+        background-color: $primary-color-darken-1;
+        border-color: $primary-color-darken-1;
+    }
 
-  &:active {
-    color: $white-color;
-    background-color: $primary-color-darken-2;
-    border-color: $primary-color-darken-2;
-  }
+    &:active {
+        color: $white-color;
+        background-color: $primary-color-darken-2;
+        border-color: $primary-color-darken-2;
+    }
 }
 
 .btn-header {
-  margin-left: 70px;
-  text-transform: uppercase;
-  border-radius: 50px !important;
-  font-weight: $font-regular;
+    margin-left: 70px;
+    text-transform: uppercase;
+    border-radius: 50px !important;
+    font-weight: $font-regular;
 }
 
 .btn-primary {
-  color: $primary-color;
-  border-color: $primary-color;
-  box-shadow: none;
+    color: $primary-color;
+    border-color: $primary-color;
+    box-shadow: none;
 }
 
 .button-o {
-  display: inline-block;
-  font-size: $h3-font-size;
-  color: $primary-color;
-  padding: 1rem 2rem;
-  border: 2px solid $primary-color;
-  border-radius: .5rem;
-  font-weight: $font-regular;
-  transition: $transition-all;
-  &:hover {
-    color: $white-color;
+    display: inline-block;
+    font-size: $h3-font-size;
+    color: $primary-color;
+    padding: 1rem 2rem;
     border: 2px solid $primary-color;
-    background-color: $primary-color;
-  }
-  &:active {
-    border: 2px solid $primary-color-darken-2;
-    background-color: $primary-color-darken-2;
-  }
-  &__icon {
-    width: 30px;
-    height: 30px;
-    margin-left: $mb-1;
-  }
-  &-flex {
-    display: inline-flex;
-    align-items: center;
-  }
+    border-radius: 0.5rem;
+    font-weight: $font-regular;
+    transition: $transition-all;
+    &:hover {
+        color: $white-color;
+        border: 2px solid $primary-color;
+        background-color: $primary-color;
+    }
+    &:active {
+        border: 2px solid $primary-color-darken-2;
+        background-color: $primary-color-darken-2;
+    }
+    &__icon {
+        width: 30px;
+        height: 30px;
+        margin-left: $mb-1;
+    }
+    &-flex {
+        display: inline-flex;
+        align-items: center;
+    }
 }
 
 .button-b {
-  display: inline-block;
-  background-color: $primary-color;
-  color: $white-color;
-  padding: 1rem 2rem;
-  border-radius: .5rem;
-  font-weight: $font-regular;
-  transition: $transition-all;
-  &:hover {
-    color: $white-color;
+    display: inline-block;
     background-color: $primary-color;
-  }
+    color: $white-color;
+    padding: 1rem 2rem;
+    border-radius: 0.5rem;
+    font-weight: $font-regular;
+    transition: $transition-all;
+    &:hover {
+        color: $white-color;
+        background-color: $primary-color;
+    }
 
-  &:active {
-    background-color: $primary-color-darken-2;
-  }
+    &:active {
+        background-color: $primary-color-darken-2;
+    }
 
-  &__icon {
-    width: 20px;
-    height: 20px;
-    margin-left: $mb-1;
-  }
+    &__icon {
+        width: 20px;
+        height: 20px;
+        margin-left: $mb-1;
+    }
 
-  &-flex {
-    display: inline-flex;
-    align-items: center;
-  }
+    &-flex {
+        display: inline-flex;
+        align-items: center;
+    }
 }
 
 .button {
-  margin-bottom: $mb-1;
+    margin-bottom: $mb-1;
 
-  &-small {
-    font-size: $small-font-size;
-    padding: .75rem 1rem;
-  }
-
-  &-link {
-    padding: 0;
-    background-color: transparent;
-    color: $first-color;
-  }
-  &-white {
-    background-color: $white-color;
-    color: $first-color;
-    &:hover {
-      color: $first-color;
+    &-small {
+        font-size: $small-font-size;
+        padding: 0.75rem 1rem;
     }
-  }
+
+    &-link {
+        padding: 0;
+        background-color: transparent;
+        color: $first-color;
+    }
+    &-white {
+        background-color: $white-color;
+        color: $first-color;
+        &:hover {
+            color: $first-color;
+        }
+    }
 }
