--- a/client/src/pages/Skills/Skills.scss
+++ b/client/src/pages/Skills/Skills.scss
@@ -1,89 +1,89 @@
 .skills {
-  &__container {
-    row-gap: 0;
-  }
-  &__header {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    margin-bottom: $mb-2-5;
-    cursor: pointer;
-  }
-  &__icon svg {
-    width: 38px;
-    height: 38px;
-    color: $primary-color;
-    margin-right: $mb-0-75;
-  }
-  &__arrow {
-    width: 38px;
-    height: 38px;
-    color: $primary-color;
-    transition: .4s;
-    &:hover {
-      color: $primary-color-darken-1;
+    &__container {
+        row-gap: 0;
     }
-    &:active {
-      color: $primary-color-darken-2;
+    &__header {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        margin-bottom: $mb-2-5;
+        cursor: pointer;
     }
-  }
-  &__head {
-    width: 100%;
-    flex: 1;
-  }
-  &__title {
-    font-size: $h3-font-size;
-  }
-  &__subtitle {
-    font-size: $small-font-size;
-    color: $first-color-lighter;
-  }
-  &__list {
-    row-gap: 1.5rem;
-    padding-left: 3rem;
-  }
-  &__titles {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: $mb-0-5;
-  }
-  &__name {
-    font-size: $normal-font-size;
-    font-weight: $font-medium;
-  }
-  &__bar .skills__percentage {
-    height: 5px;
-    border-radius: .25rem;
-  }
-  &__bar {
-    background-color: $primary-color-lighten-2;
-  }
-  &__percentage {
-    display: block;
-    background-color: $primary-color-lighten-1;
-  }
-  &__html {
-    width: 90%;
-  }
-  &__css {
-    width: 85%;
-  }
-  &__js {
-    width: 70%;
-  }
-  &__react {
-    width: 55%;
-  }
+    &__icon svg {
+        width: 38px;
+        height: 38px;
+        color: $primary-color;
+        margin-right: $mb-0-75;
+    }
+    &__arrow {
+        width: 38px;
+        height: 38px;
+        color: $primary-color;
+        transition: 0.4s;
+        &:hover {
+            color: $primary-color-darken-1;
+        }
+        &:active {
+            color: $primary-color-darken-2;
+        }
+    }
+    &__head {
+        width: 100%;
+        flex: 1;
+    }
+    &__title {
+        font-size: $h3-font-size;
+    }
+    &__subtitle {
+        font-size: $small-font-size;
+        color: $first-color-lighter;
+    }
+    &__list {
+        row-gap: 1.5rem;
+        padding-left: 3rem;
+    }
+    &__titles {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: $mb-0-5;
+    }
+    &__name {
+        font-size: $normal-font-size;
+        font-weight: $font-medium;
+    }
+    &__bar .skills__percentage {
+        height: 5px;
+        border-radius: 0.25rem;
+    }
+    &__bar {
+        background-color: $primary-color-lighten-2;
+    }
+    &__percentage {
+        display: block;
+        background-color: $primary-color-lighten-1;
+    }
+    &__html {
+        width: 90%;
+    }
+    &__css {
+        width: 85%;
+    }
+    &__js {
+        width: 70%;
+    }
+    &__react {
+        width: 55%;
+    }
 
-  &__close .skills__list {
-    height: 0;
-    overflow: hidden;
-  }
-  &__open .skills__list {
-    height: max-content;
-    margin-bottom: $mb-2-5;
-  }
-  &__open .skills__arrow {
-    transform: rotate(-180deg);
-  }
+    &__close .skills__list {
+        height: 0;
+        overflow: hidden;
+    }
+    &__open .skills__list {
+        height: max-content;
+        margin-bottom: $mb-2-5;
+    }
+    &__open .skills__arrow {
+        transform: rotate(-180deg);
+    }
 }
